force-app/main/default/objects/Reference_CER_Object__c/Reference_CER_Object__c.object-meta.xml
<CustomObject>
    <label>Reference CER Object</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference CER Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference CER Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>