force-app/main/default/objects/Reference_CER_Object__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference CER Objects</relationshipLabel>
    <relationshipName>Reference_CER_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>