force-app/main/default/objects/Reference_CER_Object__c/fields/Check_Signing_Received__c.field-meta.xml
<CustomField>
    <fullName>Check_Signing_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Signing Received</label>
    <type>Date</type>
</CustomField>