force-app/main/default/objects/Reference_CER_Object__c/fields/Client_Unresponsive_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Client_Unresponsive_Number_of_Days__c</fullName>
    <label>Client Unresponsive - Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>