force-app/main/default/objects/Reference_CER_Object__c/fields/Date_Approved_Quote_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_Quote_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Approved Quote Received</label>
    <type>Date</type>
</CustomField>