force-app/main/default/objects/Reference_CER_Object__c/fields/PAID_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>PAID_Form_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PAID Form Received</label>
    <type>Date</type>
</CustomField>