force-app/main/default/objects/Reference_CER_Object__c/fields/Workers_Comp_Declaration_Page__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Declaration_Page__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workers Comp Declaration Page</label>
    <type>Date</type>
</CustomField>