force-app/main/default/objects/Reference_CER_Object__c/recordTypes/Reference_CER_Object_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Reference_CER_Object_Record_type</fullName>
    <active>true</active>
    <label>Reference CER Object Record type</label>
</RecordType>